[gd_scene load_steps=23 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Interpreter.gd" type="Script" id=2]
[ext_resource path="res://GroundControl.gd" type="Script" id=3]
[ext_resource path="res://Assets/SkyWithClouds.png" type="Texture" id=4]
[ext_resource path="res://Camera2D.gd" type="Script" id=5]
[ext_resource path="res://Assets/EmptySpace.png" type="Texture" id=6]
[ext_resource path="res://Assets/Stars.png" type="Texture" id=7]
[ext_resource path="res://Assets/WhiteBackground.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sunlight.png" type="Texture" id=9]
[ext_resource path="res://Assets/PhotoFrame.png" type="Texture" id=10]
[ext_resource path="res://Assets/Jupiter.png" type="Texture" id=11]
[ext_resource path="res://Assets/StarsWithEarthInSunbeam.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Alarm"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Screen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 0.509804 ), Color( 1, 0, 0, 0.509804 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "DeeperSpaceToDeepest"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("LightSpaceBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.509804, 0.509804, 0.509804, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sunlight:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.509804 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.509804 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "DeeperSpaceToDeepest"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("LightSpaceBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.509804, 0.509804, 0.509804, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sunlight:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.509804 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.509804 ) ]
}

[sub_resource type="Animation" id=4]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("AtmosphereBackround:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AtmosphereBackround:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 10, 10 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/ConsoleContainer/VBoxContainer/Output:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=6]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("PhotoFrame:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PhotoFrame:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath("Jupiter:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 12 ),
"transitions": PoolRealArray( 1.93187, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Jupiter:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 12 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 779.11, 532.53 ), Vector2( -800, 532.53 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Jupiter:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 11.9, 12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=8]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/ConsoleContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StarsWithEarth:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Stars:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 540 ), Vector2( 2880, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StarsWithEarth:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -960, 540 ), Vector2( 960, 540 ) ]
}

[sub_resource type="Animation" id=10]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 40, -40 ) ]
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="LightSpaceBackground" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 6 )

[node name="Stars" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 7 )

[node name="StarsWithEarth" type="Sprite" parent="."]
position = Vector2( -960, 540 )
texture = ExtResource( 12 )

[node name="AtmosphereBackround" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="Sunlight" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 9 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 9 )

[node name="Jupiter" type="Sprite" parent="."]
position = Vector2( 779.11, 532.53 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 11 )

[node name="PhotoFrame" type="Sprite" parent="."]
position = Vector2( -90.2927, -83.7131 )
texture = ExtResource( 10 )

[node name="Screen" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 0 )
position = Vector2( 960, 540 )
texture = ExtResource( 8 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ConsoleContainer" type="PanelContainer" parent="HUD"]
self_modulate = Color( 0.509804, 0.509804, 0.509804, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -252.0
margin_top = -182.0
margin_right = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/ConsoleContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 497.0
margin_bottom = 175.0

[node name="Output" type="RichTextLabel" parent="HUD/ConsoleContainer/VBoxContainer"]
margin_right = 490.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )
focus_mode = 2
visible_characters = 0
text = "
"
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/ConsoleContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 490.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathLabel" type="Label" parent="HUD/ConsoleContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 54.0
margin_bottom = 19.0
text = "ROOT:\\>"

[node name="CommandLine" type="LineEdit" parent="HUD/ConsoleContainer/VBoxContainer/HBoxContainer"]
margin_left = 58.0
margin_right = 490.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="PanelContainer" parent="HUD"]
visible = false
margin_right = 242.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/StatsContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 235.0
margin_bottom = 57.0

[node name="SpeedDisplay" type="Label" parent="HUD/StatsContainer/VBoxContainer"]
margin_right = 228.0
margin_bottom = 14.0
text = "Speed: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DistanceDisplay" type="Label" parent="HUD/StatsContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 228.0
margin_bottom = 32.0
text = "Distance from earth:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelDisplay" type="Label" parent="HUD/StatsContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 228.0
margin_bottom = 50.0
text = "10 seconds of thrust remaining"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhotoContainer" type="PanelContainer" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -414.0
margin_bottom = 414.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/PhotoContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 407.0
margin_bottom = 407.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interpreter" type="Node" parent="."]
script = ExtResource( 2 )

[node name="GroundControl" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
script = ExtResource( 5 )

[node name="AlarmAnimation" type="AnimationPlayer" parent="."]
anims/Alarm = SubResource( 1 )

[node name="SkyChangeAnimation" type="AnimationPlayer" parent="."]
anims/DeeperSpaceToDeepest = SubResource( 2 )
anims/LightSpaceToDeeper = SubResource( 3 )
anims/SkyToLightSpace = SubResource( 4 )

[node name="WritingAnimation" type="AnimationPlayer" parent="."]
anims/Writing = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="PhotoAnimation" type="AnimationPlayer" parent="."]
anims/PhotoFrameCapture = SubResource( 6 )

[node name="JupiterAnimation" type="AnimationPlayer" parent="."]
anims/JupiterFlyby = SubResource( 7 )

[node name="EndAnimation" type="AnimationPlayer" parent="."]
anims/End = SubResource( 8 )

[node name="EarthPhotoAnimation" type="AnimationPlayer" parent="."]
anims/TurnAround = SubResource( 9 )
anims/Zoom = SubResource( 10 )
[connection signal="text_entered" from="HUD/ConsoleContainer/VBoxContainer/HBoxContainer/CommandLine" to="." method="_on_CommandLine_text_entered"]
